Homework/istio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gohttpserver-istio
  labels:
    istio-injection: enabled
