Homework/istio/virtualservice.yaml
apiVersion: networking.isio.io/v1alpha3
kind: VirtualService
metadata:
  name: gohttpserver-vs
spec:
  hosts:
  - gohttpserver.istio.cloudnative-learn.com
  gateways:
  - gohttpserver-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: gohttpserver-istio
          port:
            number: 80
